--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     <div class="backdrop">
         <div class="modal">
           <button type="button" class="modal-close">
-            <svg class="icon-close" width="8px" height="8px">
+            <svg class="icon-close" width="8" height="8">
               <use href="./images/icons.svg#icon-close-black"></use>
             </svg>
           </button>
