--- a/index.html
+++ b/index.html
@@ -440,6 +440,13 @@
                     </svg>
                   </div>
               </div>
+              <div class="modal-field">
+                <label for="comment" class="from-comment">Comment</label>
+                  <div class="modal-comment">
+                    <input type="text" class="modal-comment" name="comment" id="comment" placeholder="&#8203;Text input">
+                    </input>
+                  </div>
+              </div>
               <button type="submit" class="modal-btn">Send</button>
             </form>
         </div>
