--- a/index.html
+++ b/index.html
@@ -440,12 +440,13 @@
                     </svg>
                   </div>
               </div>
-              <div class="modal-field">
-                <label for="comment" class="from-comment">Comment</label>
-                  <div class="modal-comment">
-                    <input type="text" class="modal-comment" name="comment" id="comment" placeholder="&#8203;Text input">
-                    </input>
-                  </div>
+              <div class="modal-field-comment">
+                <label for="user-comment" class="form-label">Comment</label>
+              <textarea name="user-comment" placeholder="Text input" id="user-comment" cols="30" rows="10" class="area-text"></textarea>
+              </div>
+              <div>
+                <input type="text">
+                <label for=""></label>
               </div>
               <button type="submit" class="modal-btn">Send</button>
             </form>
