--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         </div>
         </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal">
           <button type="button" class="modal-close">
             <svg class="icon-close" width="8" height="8">
@@ -417,7 +417,7 @@
                 <label for="user-name" class="form-label"> Name</label>
                   <div class="modal-icon-wrap">
                     <input type="text" required name="user-name" class="modal-input" id="user-name">
-                    <svg class="modal-icon" width="18" height="18">
+                    <svg class="modal-icon" width="18" height="24">
                       <use href="./images/icons.svg#icon-person-black"></use>
                     </svg>
                   </div>
@@ -444,9 +444,11 @@
                 <label for="user-comment" class="form-label">Comment</label>
               <textarea name="user-comment" placeholder="Text input" id="user-comment" cols="30" rows="10" class="area-text"></textarea>
               </div>
-              <div>
-                <input type="text">
-                <label for=""></label>
+              <div class="checkbox">
+                <input type="checkbox"  id="user-privacy" value="true" name="user-privacy" class="checkbox-input visually-hidden">
+                <label for="user-privacy" class="checkbox-label"><span class="checkbox-icon"><svg class="checkbox-svg" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Checkbox"></use>
+                </svg></span> accept the terms and conditions of the</label>
               </div>
               <button type="submit" class="modal-btn">Send</button>
             </form>
