--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
               <div class="checkbox">
                 <input type="checkbox"  id="user-privacy" value="true" name="user-privacy" class="checkbox-input visually-hidden">
                 <label for="user-privacy" class="checkbox-label"><span class="checkbox-icon"><svg class="checkbox-svg" width="10" height="8">
-                  <use href="./images/icons.svg#icon-Checkbox"></use>
-                </svg></span> accept the terms and conditions of the</label>
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg></span>I accept the terms and conditions of the <a class="checkbox-policy" href="">Privacy Policy</a></label>
               </div>
               <button type="submit" class="modal-btn">Send</button>
             </form>
