--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header class="header">
@@ -402,8 +402,19 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-paragraph">Subscribe</p>
+          <form  class="subscribe-form">
+            <label for="subscribe-input" class="subscribe-label"><input type="email" name="subscribe-input" id="subscribe-input" class="subscribe-input" placeholder="E-mail"></label>
+            <button type="submit" class="subscribe-btn">Subscribe <svg class="subscribe-svg" width="24" height="24">
+              <use href="./images/icons.svg#icon-frame"></use>
+            </svg>
+          </button>
+          </form>
+        </div>
         </div>
     </footer>
+    <!----BACKDROP-->
     <div class="backdrop is-open">
         <div class="modal">
           <button type="button" class="modal-close">
