--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="WebStudio" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,6 +47,7 @@
                 >
               </li>
             </ul>
+            </button>
           </address>
       </div>
     </header>
@@ -415,7 +417,7 @@
         </div>
     </footer>
     <!----BACKDROP-->
-    <div class="backdrop is-open">
+    <!-- <div class="backdrop is-open">
         <div class="modal">
           <button type="button" class="modal-close">
             <svg class="icon-close" width="8" height="8">
@@ -464,6 +466,6 @@
               <button type="submit" class="modal-btn">Send</button>
             </form>
         </div>
-      </div>
+      </div> -->
   </body>
 </html>
